[package]
name = "busydeck"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18.0"
vulkanalia = { version = "0.28.0", features = ["libloading", "window"] }
winit = "0.30.11"
sysinfo = "0.32.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
